JSON-Schema-Modern-0.543
          - now allowing runtime overriding of the "strict" configuration
          - add "effective_base_uri", for adjusting the locations of errors
            and annotations against a dynamic base

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.542
+version 0.543
 
 =head1 SYNOPSIS
 
@@ -172,6 +172,29 @@ L</short_circuit>, L</collect_annotations>, L</annotate_unknown_keywords>, L</sc
 L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
 settings for just this evaluation call.
 
+You can also pass use these keys to alter behaviour (these are generally only used by custom validation
+applications that contain embedded JSON Schemas):
+
+=over 4
+
+=item *
+
+C<data_path>: adjusts the effective path of the data instance as of the start of evaluation
+
+=item *
+
+C<traversed_schema_path>: adjusts the accumulated path as of the start of evaluation (or last C<$id> or C<$ref>)
+
+=item *
+
+C<initial_schema_uri>: adjusts the recorded absolute keyword location as of the start of evaluation
+
+=item *
+
+C<effective_base_uri>: locations in errors and annotations are resolved against this URI
+
+=back
+
 The result is a L<JSON::Schema::Modern::Result> object, which can also be used as a boolean.
 
 =head2 evaluate
@@ -207,6 +230,29 @@ L</short_circuit>, L</collect_annotations>, L</annotate_unknown_keywords>, L</sc
 L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
 settings for just this evaluation call.
 
+You can also pass use these keys to alter behaviour (these are generally only used by custom validation
+applications that contain embedded JSON Schemas):
+
+=over 4
+
+=item *
+
+C<data_path>: adjusts the effective path of the data instance as of the start of evaluation
+
+=item *
+
+C<traversed_schema_path>: adjusts the accumulated path as of the start of evaluation (or last C<$id> or C<$ref>)
+
+=item *
+
+C<initial_schema_uri>: adjusts the recorded absolute keyword location as of the start of evaluation
+
+=item *
+
+C<effective_base_uri>: locations in errors and annotations are resolved against this URI
+
+=back
+
 You can pass a series of callback subs to this method corresponding to keywords, which is useful for
 identifying various data that are not exposed by annotations.
 This feature is highly experimental and may change in the future.
@@ -232,6 +278,26 @@ The result is a L<JSON::Schema::Modern::Result> object, which can also be used a
 Traverses the provided schema without evaluating it against any instance data. Returns the
 internal state object accumulated during the traversal, including any identifiers found therein, and
 any errors found during parsing. For internal purposes only.
+
+Optionally, a hashref can be passed as a second parameter which alters some
+behaviour (these are generally only used by custom validation
+applications that contain embedded JSON Schemas):
+
+=over 4
+
+=item *
+
+C<traversed_schema_path>: adjusts the accumulated path as of the start of evaluation (or last C<$id> or C<$ref>)
+
+=item *
+
+C<initial_schema_uri>: adjusts the recorded absolute keyword location as of the start of evaluation
+
+=item *
+
+C<metaschema_uri>: use the indicated URI as the metaschema
+
+=back
 
 You can pass a series of callback subs to this method corresponding to keywords, which is useful for
 extracting data from within schemas and skipping properties that may look like keywords but actually
