suppress new snails warning on 5.35.9

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - avoid new experimental warning on 5.35.9
 
 0.544     2022-02-16 05:53:08Z
           - add_schema() now has more consistent exception handling
