--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.545     2022-02-22 04:30:36Z
           - avoid new experimental warning on 5.35.9
           - skip unresolvable identifiers for future drafts in acceptance
