--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - improved error stringification on document error
 
 0.546     2022-02-23 01:33:03Z
           - avoid use of newly-experimental signature syntax on 5.35.9
