--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.547     2022-03-03 06:08:51Z
           - improved error stringification on document error
 
