--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - "annotate_unknown_keywords" option removed; behaviour is now on
             for draft2020-12 and off otherwise
+          - annotation behaviour for applicator keywords is fixed per the
+            spec, resulting in fewer redundant errors from unevaluatedItems,
+            unevaluatedProperties keywords
 
 0.547     2022-03-03 06:08:51Z
           - improved error stringification on document error
