JSON-Schema-Modern-0.551
          - the "specification_version" configuration option now accepts
            values without "draft" in the name, to facilitate a new naming
            convention used for future specification versions
          - new "formatted_annotations" option for JSON::Schema::Modern::Result,
            to allow for omitting annotations from result output

--- a/README.pod
+++ b/README.pod
@@ -10,13 +10,14 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.550
+version 0.551
 
 =head1 SYNOPSIS
 
   use JSON::Schema::Modern;
 
   $js = JSON::Schema::Modern->new(
+    specification_version => 'draft2020-12',
     output_format => 'flag',
     ... # other options
   );
@@ -37,8 +38,13 @@ These values are all passed as arguments to the constructor.
 
 Indicates which version of the JSON Schema specification is used during evaluation. When not set,
 this value is derived from the C<$schema> keyword in the schema used in evaluation, or defaults to
-the latest version (draft2020-12). When left unset, the use of C<$schema> keywords in
-the schema is permitted, to switch between draft versions.
+the latest version (currently C<draft2020-12>).
+
+The use of this option is I<HIGHLY> encouraged to ensure continued correct operation of your schema.
+The current default value will not stay the same over time.
+
+Note that you can also use a C<$schema> keyword in the schema itself, to specify a different metaschema or
+specification version.
 
 May be one of:
 
@@ -46,15 +52,15 @@ May be one of:
 
 =item *
 
-L<C<draft2020-12>|https://json-schema.org/specification-links.html#2020-12>, corresponding to metaschema C<https://json-schema.org/draft/2020-12/schema>.
+L<C<draft2020-12 or 2020-12>|https://json-schema.org/specification-links.html#2020-12>, corresponding to metaschema C<https://json-schema.org/draft/2020-12/schema>.
 
 =item *
 
-L<C<draft2019-09>|https://json-schema.org/specification-links.html#2019-09-formerly-known-as-draft-8>, corresponding to metaschema C<https://json-schema.org/draft/2019-09/schema>.
+L<C<draft2019-09 or 2019-09>|https://json-schema.org/specification-links.html#2019-09-formerly-known-as-draft-8>, corresponding to metaschema C<https://json-schema.org/draft/2019-09/schema>.
 
 =item *
 
-L<C<draft7>|https://json-schema.org/specification-links.html#draft-7>, corresponding to metaschema C<http://json-schema.org/draft-07/schema#>
+L<C<draft7 or 7>|https://json-schema.org/specification-links.html#draft-7>, corresponding to metaschema C<http://json-schema.org/draft-07/schema#>
 
 =back
 
