fix erroneous fix to default behaviour
traverse mode should show schema locations, since data locations are null.
evaluate mode should show data locations, as that is most likely to be useful to the user.
when mode is not specified, default to evaluate.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix result serialization from exceptions (broken in 0.550)
 
 0.551     2022-05-01 01:29:51Z
           - the "specification_version" configuration option now accepts
