switch to Slurpy[], and then bump version again to avoid test failures
e.g. see https://www.cpantesters.org/cpan/report/ccb7958c-09ed-11ed-ba0e-f91152bf57b8

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - use new Slurpy type in Types::Standard
 
 0.553     2022-06-25 03:27:14Z
           - expanded on the documentation for serializing results.
