--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.554     2022-07-24 00:08:54Z
           - use new Slurpy type in Types::Standard
 
