--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.555     2022-09-10 21:43:11Z
           - the "iri-reference" format is now supported, sort of (all strings
             will be accepted as valid)
