--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.555
+version 0.556
 
 =head1 SYNOPSIS
 
@@ -43,9 +43,6 @@ the latest version (currently C<draft2020-12>).
 The use of this option is I<HIGHLY> encouraged to ensure continued correct operation of your schema.
 The current default value will not stay the same over time.
 
-Note that you can also use a C<$schema> keyword in the schema itself, to specify a different metaschema or
-specification version.
-
 May be one of:
 
 =over 4
@@ -63,6 +60,9 @@ L<C<draft2019-09> or C<2019-09>|https://json-schema.org/specification-links.html
 L<C<draft7> or C<7>|https://json-schema.org/specification-links.html#draft-7>, corresponding to metaschema C<http://json-schema.org/draft-07/schema#>
 
 =back
+
+Note that you can also use a C<$schema> keyword in the schema itself, to specify a different metaschema or
+specification version.
 
 =head2 output_format
 
@@ -268,6 +268,7 @@ For example, to find the locations where all C<$ref> keywords are applied B<succ
   });
 
 The return value is a L<JSON::Schema::Modern::Result> object, which can also be used as a boolean.
+Callbacks are not compatible with L</short_circuit> mode.
 
 =head2 validate_schema
 
