fixes to content* keywords
- improve error strings
- *correctly* test all keywords on draft2020-12 and draft7
- handle utf8-encoded content

previously we thought we were using draft7 but we weren't! :o

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - improvements to processing of keywords in the Content vocabulary
+            (contentEncoding, contentMediaType, contentSchema)
 
 0.556     2022-09-18 22:41:50Z
           - some performance optimizations for schema traversal and evaluation
