--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - improvements to processing of keywords in the Content vocabulary
             (contentEncoding, contentMediaType, contentSchema)
+          - LICENSE now provided withb bundled metaschema files
 
 0.556     2022-09-18 22:41:50Z
           - some performance optimizations for schema traversal and evaluation
