require a new enough Test::Without::Module to get the expected error message
e.g. see https://www.cpantesters.org/cpan/report/17ca22fc-7036-1014-9414-79faefaa1848

TWM 0.19 fixed the exception thrown when faking the absence of a module to
match what core does (which is what we are testing for).

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - bump a test prereq to fix a mismatched exception message
 
 0.561     2023-01-07 20:57:37Z
           - further tweak performance by only collecting annotations when
