annotations cannot propagate past a "not"
..so even if we requested annotations to be returned in the final result, we
need not collect them here, and we can short circuit the result.
We need to be careful if there are "unevaluated" keywords inside that
subschema, where we still need to collect annotations (but not in scopes lower
than that).

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - further tweak performance by short-circuiting inside some
+            subschemas (but not when annotations must be collected for
+            "unevaluated" keywords)
 
 0.563     2023-02-04 23:38:13Z
           - documentation update: improve language around data types and
