JSON-Schema-Modern-0.564
          - further tweak performance by short-circuiting inside some
            subschemas (but not when annotations must be collected for
            "unevaluated" keywords)
          - added support for 'base64url' encoding

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.563
+version 0.564
 
 =head1 SYNOPSIS
 
@@ -383,23 +383,23 @@ These media types are already known:
 
 =item *
 
-C<application/json>
+C<application/json> - see L<RFC 4627|https://www.rfc-editor.org/rfc/rfc4627>
 
 =item *
 
-C<application/schema+json>
+C<application/schema+json> - see L<proposed definition|https://json-schema.org/draft/2020-12/json-schema-core.html#name-application-schemajson>
 
 =item *
 
-C<application/schema-instance+json>
+C<application/schema-instance+json> - see L<proposed definition|https://json-schema.org/draft/2020-12/json-schema-core.html#name-application-schema-instance>
 
 =item *
 
-C<application/octet-stream>
+C<application/octet-stream> - passes strings through unchanged
 
 =item *
 
-C<text/*>
+C<text/*> - passes strings through unchanged
 
 =back
 
@@ -417,8 +417,8 @@ You can use it thusly:
 
 =head2 add_encoding
 
-  $js->add_media_type('application/furble' => sub ($content_ref) {
-    return \ ...;  # data representing the deserialized content for Content-Type: application/furble
+  $js->add_encoding('bloop' => sub ($content_ref) {
+    return \ ...;  # data representing the deserialized content for Content-Transfer-Encoding: bloop
   });
 
 Takes an encoding name and a subref which takes a single scalar reference, which is expected to be
@@ -433,11 +433,15 @@ Encodings handled natively are:
 
 =item *
 
-C<identity>
+C<identity> - passes strings through unchanged
 
 =item *
 
-C<base64>
+C<base64> - see L<RFC 4648 §4|https://www.rfc-editor.org/rfc/rfc4648#section-4>
+
+=item *
+
+C<base64url> - see L<RFC 4648 §5|https://www.rfc-editor.org/rfc/rfc4648#section-5>
 
 =back
 
