--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.564     2023-03-04 00:43:42Z
           - further tweak performance by short-circuiting inside some
             subschemas (but not when annotations must be collected for
