support application/x-ndjson as a media_type
as defined in https://github.com/ndjson/ndjson-spec

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - add media-type support for application/x-ndjson
 
 0.567     2023-06-03 22:11:23Z
           - vocabularies are now evaluated in a different order: Validation
