--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.568     2023-06-17 07:16:54Z
           - add media-type support for application/x-ndjson and
             application/x-www-form-urlencoded
