--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.569     2023-07-08 23:36:06Z
           - fixed some edge cases with ipv6 format validation
 
