improved date-time, date format validation

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - small performance improvements to 'date-time' and 'date' format
+            validation
 
 0.569     2023-07-08 23:36:06Z
           - fixed some edge cases with ipv6 format validation
