--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.570     2023-09-02 20:42:03Z
           - small performance improvements to 'date-time' and 'date' format
             validation
