JSON-Schema-Modern-0.570
          - small performance improvements to 'date-time' and 'date' format
            validation
          - new stringy_numbers option, for validating numbers more loosely

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.569
+version 0.570
 
 =head1 SYNOPSIS
 
@@ -73,9 +73,10 @@ Passed to L<JSON::Schema::Modern::Result/output_format>.
 =head2 short_circuit
 
 When true, evaluation will return early in any execution path as soon as the outcome can be
-determined, rather than continuing to find all errors or annotations. Be aware that this can result
-in invalid results in the presence of keywords that depend on annotations, namely
-C<unevaluatedItems> and C<unevaluatedProperties>.
+determined, rather than continuing to find all errors or annotations.
+This option is safe to use in all circumstances, even in the presence of
+C<unevaluatedItems> and C<unevaluatedProperties> keywords: the validation result will not change;
+only some errors will be omitted from the result.
 
 Defaults to true when C<output_format> is C<flag>, and false otherwise.
 
@@ -116,7 +117,7 @@ See L</add_media_type> and L</add_encoding> for adding additional type support.
 =for stopwords shhh
 
 Technically only draft7 allows this and drafts 2019-09 and 2020-12 prohibit ever returning the
-subschema evaluation results together with their parent schema's, so shhh. I'm trying to get this
+subschema evaluation results together with their parent schema's results, so shhh. I'm trying to get this
 fixed for the next draft.
 
 =head2 collect_annotations
@@ -127,8 +128,58 @@ Defaults to false.
 
 =head2 scalarref_booleans
 
-When true, any type that is expected to be a boolean B<in the instance data> may also be expressed
+When true, any value that is expected to be a boolean B<in the instance data> may also be expressed
 as the scalar references C<\0> or C<\1> (which are serialized as booleans by JSON backends).
+
+Defaults to false.
+
+=head2 stringy_numbers
+
+When true, any value that is expected to be a number or integer B<in the instance data> may also be
+expressed as a string. This does B<not> apply to the C<const> or C<enum> keywords, but only
+the following keywords:
+
+=over 4
+
+=item *
+
+C<type> (where both C<string> and C<number> (and possibly C<integer>) are considered valid
+
+=item *
+
+C<multipleOf>
+
+=item *
+
+C<maximum>
+
+=item *
+
+C<exclusiveMaximum>
+
+=item *
+
+C<minimum>
+
+=item *
+
+C<exclusiveMinimum>
+
+=back
+
+This allows you to write a schema like this (which validates a string representing an integer):
+
+  type: string
+  pattern: ^[0-9]$
+  multipleOf: 4
+  minimum: 16
+  maximum: 256
+
+Such keywords are only applied if the value looks like a number, and do not generate a failure
+otherwise. Values are determined to be numbers via L<perlapi/looks_like_number>.
+This option is only intended to be used for evaluating data from sources that can only be strings,
+such as the extracted value of an HTTP header or query parameter.
+
 Defaults to false.
 
 =head2 strict
@@ -170,7 +221,7 @@ or a URI string indicating the location where such a schema is located.
 
 Optionally, a hashref can be passed as a third parameter which allows changing the values of the
 L</short_circuit>, L</collect_annotations>, L</scalarref_booleans>,
-L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
+L</stringy_numbers>, L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
 settings for just this evaluation call.
 
 You can also pass use these keys to alter behaviour (these are generally only used by custom validation
@@ -228,7 +279,7 @@ or a URI string indicating the location where such a schema is located.
 
 Optionally, a hashref can be passed as a third parameter which allows changing the values of the
 L</short_circuit>, L</collect_annotations>, L</scalarref_booleans>,
-L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
+L</stringy_numbers>, L</strict>, L</validate_formats>, and/or L</validate_content_schemas>
 settings for just this evaluation call.
 
 You can also pass use these keys to alter behaviour (these are generally only used by custom validation
