--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.570
+version 0.571
 
 =head1 SYNOPSIS
 
@@ -89,7 +89,7 @@ other, or badly-written schemas that could be optimized. Defaults to 50.
 =head2 validate_formats
 
 When true, the C<format> keyword will be treated as an assertion, not merely an annotation. Defaults
-to false.
+to true when specification_version is draft7, and false otherwise.
 
 =head2 format_validations
 
