--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.573     2023-10-21 23:49:03Z
           - fix construction of default values of some attributes e.g.
             media_types, encodings
