process '$schema' early enough that dialect changes are properly recorded

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - properly handle some edge cases where the "$schema" keyword can
+            change the dialect to a different specification version with
+            different Core vocabulary keywords
 
 0.574     2023-11-13 00:50:55Z
           - better detection of schema locations, for use by Document
