--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.574     2023-11-13 00:50:55Z
           - better detection of schema locations, for use by Document
             subclasses
