--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.578     2023-12-29 23:13:44Z
           - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
             now we use Cpanel::JSON::XS or JSON::PP directly, using the same
