--- a/Changes
+++ b/Changes
@@ -5,6 +5,8 @@ Revision history for JSON-Schema-Modern
             checksum of a schema rather than the content itself
           - fix error occurring when using the FormatAssertion vocabulary in
             an evaluator object that was loaded from a serialized object
+          - fixed custom format definitions to not allow 'integer' types, as
+            per the specification
 
 0.578     2023-12-29 23:13:44Z
           - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
