--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ Revision history for JSON-Schema-Modern
             per the specification
           - support custom format definitions that operate on more than one
             core data type
+          - fixed handling of unrecognized formats in draft2020-12 and later
+            (but only when the FormatAssertion vocabulary is explicitly
+            requested, not with validate_formats=1)
 
 0.578     2023-12-29 23:13:44Z
           - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
