make int64 tests more amenable to smaller-ivsize architectures
e.g. see
https://www.cpantesters.org/cpan/report/ca767b90-b4c7-11ee-98b0-b3c3213a625c
https://www.cpantesters.org/cpan/report/cedd2e92-b4b6-11ee-98b0-b3c3213a625c

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - update a format test to be more amenable to 32-bit architectures
 
 0.579     2024-01-15 03:32:27Z
           - improve performance by checking for duplicates by comparing the
