increment $VERSION after 0.580 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.580     2024-01-18 04:38:33Z
           - update a format test to be more amenable to 32-bit architectures
 
