--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.581
+version 0.582
 
 =head1 SYNOPSIS
 
@@ -205,6 +205,8 @@ Defaults to false.
 When true, unrecognized keywords are disallowed in schemas (they will cause an immediate abort
 in L</traverse> or L</evaluate>).
 
+Defaults to false.
+
 =head1 METHODS
 
 =for Pod::Coverage BUILDARGS FREEZE THAW
@@ -344,6 +346,7 @@ Callbacks are not compatible with L</short_circuit> mode.
 =head2 validate_schema
 
   $result = $js->validate_schema($schema);
+  $result = $js->validate_schema($schema, $config_override);
 
 Evaluates the provided schema as instance data against its metaschema. Accepts C<$schema> and
 C<$config_override> parameters in the same form as L</evaluate>.
